# FNDice

./: .gitignore  App.cpp  CMakeLists.txt  Die.cpp  Die.h  FNDice.rc  FNDice.sln  MainWindow.cpp  MainWindow.h
FNDice/: AboutDialog.Designer.cs  AboutDialog.cs  AboutDialog.xaml  AboutDialog.xaml.cs  App.cpp  App.h  Die.Designer.cs  Die.cs  FNDice.csproj  FNDice.rc  FNDice.vcxproj  FNDice.vcxproj.filters  GraphicsExtension.cs  LICENSE-2.0.html  MainWindow.Designer.cs  MainWindow.cpp  MainWindow.cs  MainWindow.h  MainWindow.resx  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  Resource.rc  Settings.cs  pch.h  vcpkg.json
FNDice/Properties/: Resources.Designer.cs  Resources.resx
FNDice/resources/: Open24.xpm
bitmaps/: History24.xpm  die128.xpm  die16.xpm  die256.xpm  die32.xpm  die64.xpm
resources/: About24.xpm  Help24.xpm  New24.xpm  Save24.xpm  about24.xpm  die128.xpm  die16.xpm  die32.xpm  help24.xpm  history24.xpm  new24.xpm  open24.xpm  save24.xpm
